--- a/block-BJaael/code/style.css
+++ b/block-BJaael/code/style.css
@@ -1,35 +1,30 @@
-html {
-  box-sizing: border-box;
-  font-size: 16px;
+.flex   {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
+
+
+.container{
+  max-width: 1200px;
+  width: 100%;
+  margin: 0rem auto;
+  
 }
 
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ol,
-ul {
-  margin: 0;
-  padding: 0;
-  font-weight: normal;
+
+
+.box  {
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
-ol,
-ul {
-  list-style: none;
-}
 
-img {
-  max-width: 100%;
-  height: auto;
+h1 {
+   text-align: center;
 }
